--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,4 +3,9 @@ language:
   ui:
     chapter_name: "Chapter "
 delete_merged_file: true
+rmd_files: [
+  "index.Rmd",
+  "01_trainingPkg.Rmd",
+  "02_introArcticdatautils.Rmd",
+  "03_editingEMLinR.Rmd"]
 output_dir: "docs"
