--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ script:
   - Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook")'
 deploy:
   provider: pages
+  edge:
+    branch: pages-ivar-set
   skip_cleanup: true
   github_token: $GITHUB_TOKEN #set in travis-ci dashboard
   on:
