--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,9 @@ deploy:
   on:
     branch: master
   local_dir: docs
+addons:
+  apt:
+    packages:
+      - librdf0-dev
+      - libnetcdf-dev
+      - r-cran-ncdf4
