First Commit (Building New Structure)

--- a/training/_bookdown.yml
+++ b/training/_bookdown.yml
@@ -3,5 +3,5 @@ language:
   ui:
     chapter_name: "Chapter "
 delete_merged_file: true
-output_dir: "docs"
+output_dir: "../docs/training"
 new_session: no
