--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ pandoc_version: 2.1.1
 sudo: false
 cache: packages
 script:
-  - Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook")'
+  - Rscript -e "xfun::in_dir('training', bookdown::render_book('index.Rmd', 'bookdown::gitbook'))"
 deploy:
   provider: pages
   skip_cleanup: true
