--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Description: This is a description.
 Version: 0.0.1
 Imports: bookdown, xfun, rmarkdown, tidyverse, arcticdatautils, EML, dataone, remotes, janitor, datamgmt
 Remotes: rstudio/bookdown, 
-NCEAS/arcticdatautils@*release,
+NCEAS/arcticdatautils,
 NCEAS/datamgmt
 License: Apache License (== 2.0)
 RoxygenNote: 6.0.1
