--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,7 @@ Maintainer: Placeholder <developer@some.domain.net>
 Description: This is a description. 
 Version: 0.0.1
 Imports: bookdown, xfun, rmarkdown, tidyverse, arcticdatautils, EML, dataone, remotes, janitor, datamgmt
-Remotes: rstudio/bookdown, 
-NCEAS/arcticdatautils,
-NCEAS/datamgmt
+Remotes: rstudio/bookdown, NCEAS/arcticdatautils@*release, NCEAS/datamgmt
 License: Apache License (== 2.0)
 RoxygenNote: 6.0.1
 LazyData: true
