--- a/reference/_output.yml
+++ b/reference/_output.yml
@@ -8,4 +8,4 @@ bookdown::gitbook:
       before: |
         <li><a href="./">Data Team Reference</a></li>
       after: |
-        <li><a href="https://nceas.github.io/datateam-training/training/" target="blank">Data Team Training</a></li>
+        <li><a href="https://nceas.github.io/datateam-training/training/" target="blank">Training</a></li>
