--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: placeholder
-Title: Placeholder
+Title: Data Team Training
 Author: Placeholder
 Maintainer: Placeholder <developer@some.domain.net>
 Description: This is a description. 
