--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Author: Placeholder
 Maintainer: Placeholder <developer@some.domain.net>
 Description: This is a description. 
 Version: 0.0.1
-Imports: bookdown, xfun, rmarkdown, tidyverse, arcticdatautils, EML, dataone, remotes, janitor, DT, datamgmt, kableExtra, listviewer
-Remotes: rstudio/bookdown, NCEAS/arcticdatautils@*release, NCEAS/datamgmt
+Imports: bookdown, rmarkdown
+Remotes: rstudio/bookdown
 License: Apache License (== 2.0)
 RoxygenNote: 6.0.1
 LazyData: true
