--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: r
 pandoc_version: 2.1.1
 sudo: false
 cache: packages
+r:
+  - oldrel
 script:
   - Rscript -e "xfun::in_dir('training', bookdown::render_book('index.Rmd', 'bookdown::gitbook'))"
   - Rscript -e "xfun::in_dir('reference', bookdown::render_book('index.Rmd', 'bookdown::gitbook'))"
