--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,11 @@ Imports:
   stringr, 
   tibble,
   xfun
-Remotes: rstudio/bookdown, NCEAS/arcticdatautils@*release, NCEAS/datamgmt
+Remotes:
+  rstudio/bookdown,
+  ropensci/EML@1b3d0a2bd63e01a3af99c77aa6a0784c3da3ea06,
+  NCEAS/arcticdatautils@*release,
+  NCEAS/datamgmt
 License: Apache License (== 2.0)
 RoxygenNote: 6.1.0
 LazyData: true
