--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ deploy:
   local_dir: docs
 addons:
   apt:
-    sources:
-      - sourceline: 'ppa:opencpu/jq'
+#    sources:
+#      - sourceline: 'ppa:opencpu/jq'
     packages:
       - librdf0-dev
       - libudunits2-dev
