--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ sudo: false
 cache: packages
 r:
   - oldrel
+  - release
 script:
   - Rscript -e "xfun::in_dir('training', bookdown::render_book('index.Rmd', 'bookdown::gitbook'))"
   - Rscript -e "xfun::in_dir('reference', bookdown::render_book('index.Rmd', 'bookdown::gitbook'))"
