--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -22,13 +22,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup R
-      - uses: r-lib/actions/setup-r@v1
+        uses: r-lib/actions/setup-r@v1
 
-       - name: Install pandoc
+      - name: Install pandoc
         run: |
           brew install pandoc
 
-       - name: Cache bookdown results
+      - name: Cache bookdown results
         uses: actions/cache@v2
         with:
           path: _bookdown_files
