--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          options(download.file.method = "libcurl")
           install.packages(c("remotes", "rcmdcheck"))
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
